--- a/SportsStore.WebUI/Views/Product/List.cshtml
+++ b/SportsStore.WebUI/Views/Product/List.cshtml
@@ -1,4 +1,6 @@
-﻿@using SportsStore.WebUI.HtmlHelpers; 
+﻿@using SportsStore.WebUI.HtmlHelpers
+@using SportsStore.Domain.Entities
+
 @model SportsStore.WebUI.Models.ProductsListViewModel
 
 @{ ViewBag.Title = "Products"; }
