--- a/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <a class="navbar-brand" href="#">SPORTS STORE</a> 
     </div> 
     <div class="row panel"> <div id="categories" class="col-xs-3"> 
-    Put something useful here later </div> 
+    @Html.Action("Menu", "Nav") </div> 
     <div class="col-xs-8"> 
         @RenderBody() 
        </div> 
