An Attempt to fix our mobile webpage

--- a/SportsStore.WebUI/Views/Shared/_Layout.Mobile.cshtml
+++ b/SportsStore.WebUI/Views/Shared/_Layout.Mobile.cshtml
@@ -1,13 +1,12 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="~/Content/one.css" rel="stylesheet" />
-    <script src="~/Scripts/two.js"></script>
-    <script src="~/Scripts/three.js"></script>
-
+    <link href="~/Content/One.css" rel="stylesheet" />
+    <script src="~/Scripts/1.9.1.js"></script>
+    <script src="~/Scripts/1.3.2.js"></script>
     <title>@ViewBag.Title</title>
 </head>
 <body>
@@ -21,7 +20,6 @@
                 @RenderBody()
             </ul>
         </div>
-
     </div>
 </body>
 </html>
